Conclusão do Requisito 2

--- a/index.html
+++ b/index.html
@@ -8,9 +8,16 @@
   <title>Adivinhe a Cor</title>
 </head>
 <body>
+
   <header>
     <h1 id="title">Adivinhe a Cor</h1>
   </header>
+
+  <main>
+    <section>
+      <p id="rgb-color">(168, 34, 1)</p>
+    </section>
+  </main>
   
   <script src="script.js"></script>
 </body>
