--- a/index.html
+++ b/index.html
@@ -17,6 +17,15 @@
     <section>
       <p id="rgb-color">(168, 34, 1)</p>
     </section>
+
+    <section>
+      <section class="ball"></section>
+      <section class="ball"></section>
+      <section class="ball"></section>
+      <section class="ball"></section>
+      <section class="ball"></section>
+      <section class="ball"></section>
+    </section>
   </main>
   
   <script src="script.js"></script>
