Conclusão do Requisito 5

--- a/index.html
+++ b/index.html
@@ -26,6 +26,12 @@
       <section class="ball"></section>
       <section class="ball"></section>
     </section>
+
+    <section>
+      <p id="answer">Escolha uma cor</p>
+      <button>Resetar</button>
+    </section>
+
   </main>
   
   <script src="script.js"></script>
