Conclusão do Requisito 6

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
     <section>
       <p id="answer">Escolha uma cor</p>
-      <button>Resetar</button>
+      <button id="reset-game">Resetar</button>
     </section>
 
   </main>
