style: Adiciona mudanças visuais no body e header

--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
 
 <body>
   <header>
-    <h1 id="title">Adivinhe a Cor</h1>
+    <h1 id="title">Color Guess Game 🤔</h1>
   </header>
   <main>
     <section id="game-info1">
