style: Adiciona mudanças visuais nas instruções de jogo e no placar

--- a/src/index.html
+++ b/src/index.html
@@ -21,11 +21,11 @@
     <h1 id="title">Color Guess Game 🤔</h1>
   </header>
   <main>
-    <section id="game-info1">
-      <p class="rgb">Código RGB</p>
-      <p class="rgb" id="rgb-color">(168, 34, 1)</p>
-      <p id="score"></p>
+    <section id="game-instructions">
+      <p>ℹ️ Tente adivinhar qual círculo possui o código RGB abaixo:</p>
+      <p id="rgb-color">(168, 34, 1)</p>
     </section>
+    <p id="score"></p>
     <section id="display-balls">
       <section class="ball"></section>
       <section class="ball"></section>
