style: Adiciona mudanças visuais na resposta e no botão de reset

--- a/src/index.html
+++ b/src/index.html
@@ -34,10 +34,8 @@
       <section class="ball"></section>
       <section class="ball"></section>
     </section>
-    <section id="game-info2">
-      <p id="answer">Escolha uma cor</p>
-      <button id="reset-game">Resetar Jogo</button>
-    </section>
+    <p id="answer">Escolha uma cor</p>
+    <button id="reset-game" class="btn btn-warning">Resetar Jogo</button>
   </main>
   <script src="script.js"></script>
 </body>
